@@ -1,4 +1,4 @@
-build :: fn () #build_entry {
+main :: fn () s32 {
 
 	// Build the C library first.
 	switch PLATFORM {
@@ -25,4 +25,6 @@ build :: fn () #build_entry {
 
 	// Compile the target.
 	compile(exe);
+
+	return 0;
 }
