@@ -1,9 +1,10 @@
-build :: fn () #build_entry {
+main :: fn () s32 {
 	#if PLATFORM != Platform.WINDOWS {
 		panic("This example is awailable only on Windows, sorry.");
 	}
 	exe := add_executable("window");
 	add_unit(exe, "main.bl");
-
 	compile(exe);
+
+	return 0;
 }
