@@ -1,6 +1,6 @@
-build :: fn () #build_entry {
+main :: fn () s32 {
 	exe := add_executable("gunner");
 	add_unit(exe, "main.bl");
-
 	compile(exe);
+	return 0;
 }
