@@ -1,6 +1,6 @@
 #load "../build-lib-common.bl"
 
-build :: fn () #build_entry {
+main :: fn () s32 {
 	tmpdir :: get_temporary();
 	moduledir :: get_module_root();
 	unzip("libpng-1.6.37.zip");
@@ -73,4 +73,5 @@ build :: fn () #build_entry {
 
 	set_cwd(rootdir);
 	os_execute("rm -rf libpng-1.6.37");
+	return 0;
 }
