@@ -1,6 +1,6 @@
 #load "../build-lib-common.bl"
 
-build :: fn () #build_entry {
+main :: fn () s32 {
 	tmpdir :: get_temporary();
 	unzip("zlib-1.3.1.zip");
 
@@ -63,4 +63,5 @@ build :: fn () #build_entry {
 
 	set_cwd(rootdir);
 	os_execute("rm -rf zlib-1.3.1");
+	return 0;
 }
