@@ -1,11 +1,12 @@
-build :: fn () #build_entry {
+main :: fn () s32 {
 	lib := add_library("lib");
 	add_unit(lib, "lib.bl");
-	compile(lib);
+	compile(lib) catch return $.code;
 
 	exe := add_executable("test");
 	add_unit(exe, "main.bl");
 	add_lib_path(exe, ".");
 	link_library(exe, "lib");
-	compile(exe);
+	compile(exe) catch return $.code;
+	return 0;
 }
