@@ -1,8 +1,13 @@
 #import "std/print"
 
+foo :: fn () #test {
+}
+
+bar :: fn () #test {
+}
+
 main :: fn () s32 {
 	print("----------------------------------------\n");
-
 	print("DONE!\n");
 	print("----------------------------------------\n");
 	return 0;
